sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:27: error: identifier expected but '}' found.
  }
  ^